Bug 478047 - On X11, Application Launcher widget can be quick-tiled
Summary: On X11, Application Launcher widget can be quick-tiled
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-04 14:11 UTC by itouchdennis
Modified: 2024-02-20 13:29 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description itouchdennis 2023-12-04 14:11:34 UTC
SUMMARY

If you open the application launcher and have some shortcuts to quick tile windows, you will encounter that the application menu is also triggered by the quick tile action, it shouldn`t.


STEPS TO REPRODUCE
1. Set up a simple dock, style: floating, center, fit content
2. Add application launcher as a widget to dock
3. Make sure you added the shortcuts for Quick Tile Window to Bottom / left / right / top -  E.g. to "Meta+Left" for Left tile
3. Open the launcher via CMD/Super-key/meta-key
4. While the launcher is open press  the quick tile shortcut (e.g meta + left)
5. The window of the launcher will resize and flip around


OBSERVED RESULT 

The application menu resizes (if its e.g. manually set up smaller as default, the default size comes back ) and also snaps into the direction you pressed

EXPECTED RESULT

The application menu should not be affected by quick tile shortcuts

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: EndeavourOS
(available in About System)
KDE Plasma Version:  5.90.0
KDE Frameworks Version:  5.246.0
Qt Version:  6.6.1
Comment 1 itouchdennis 2023-12-04 14:17:02 UTC
SystemSettings says its KDE Plasma V 5.90, while bottom right it says KDE Plasma 6.0 Beta 1 as watermark
Comment 2 Nate Graham 2023-12-08 21:03:02 UTC
Are you using X11? This works as expected for me on Wayland.
Comment 3 itouchdennis 2023-12-19 08:44:49 UTC
(In reply to Nate Graham from comment #2)
> Are you using X11? This works as expected for me on Wayland.

yes - I am using x11.
Comment 4 Nicolas Fella 2024-02-20 12:18:38 UTC
Looks like the window lost the _KDE_NET_WM_WINDOW_TYPE_APPLET_POPUP window type (during the PlasmaWindow refactor?). Windows with that type are excluded from quick tiling
Comment 5 Bug Janitor Service 2024-02-20 12:37:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1064
Comment 6 Nicolas Fella 2024-02-20 13:29:06 UTC
Git commit b41067e1960ac4bd4f30f8d3369a8e5e40c3a314 by Nicolas Fella.
Committed on 20/02/2024 at 12:37.
Pushed by nicolasfella into branch 'master'.

Fix X11 window type for AppletPopup

Make sure it has the appropriate AppletPopup window type

M  +6    -1    src/plasmaquick/appletpopup.cpp

https://invent.kde.org/plasma/libplasma/-/commit/b41067e1960ac4bd4f30f8d3369a8e5e40c3a314
Comment 7 Nicolas Fella 2024-02-20 13:29:39 UTC
Git commit 8d87208320f8d924d21f3f62d77b27d658a5af88 by Nicolas Fella.
Committed on 20/02/2024 at 13:29.
Pushed by nicolasfella into branch 'Plasma/6.0'.

Fix X11 window type for AppletPopup

Make sure it has the appropriate AppletPopup window type
(cherry picked from commit b41067e1960ac4bd4f30f8d3369a8e5e40c3a314)

M  +6    -1    src/plasmaquick/appletpopup.cpp

https://invent.kde.org/plasma/libplasma/-/commit/8d87208320f8d924d21f3f62d77b27d658a5af88