Fix X11 window type for AppletPopup

Make sure it has the appropriate AppletPopup window type

BUG: 478047